Added SEO to index

--- a/index.html
+++ b/index.html
@@ -36,15 +36,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Home-link"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About me link"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact me link"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -54,13 +65,25 @@
     <h1>Samantha Volesky</h1>
     <h3>🇺🇸 Front-end developer, based in Colorado</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="contact-link"
+        title="Contact me button"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="about me button"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid rounded"
+            alt="Photo of a yoga pose"
+            title="Yoga app"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3 text-start">Yoga app</h2>
@@ -71,7 +94,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Launch yoga app button"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -85,16 +110,28 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title="Launch weather app button"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid rounded"
+            alt="weather diagram"
+            title="weather app project"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded"
+            alt="picture of a yougurt cup with bluberries"
+            title="Yogurt app"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3 text-start">Yogurt app</h2>
@@ -106,7 +143,9 @@
           </p>
 
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title="Launch yogurt app button"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
