--- a/about.html
+++ b/about.html
@@ -22,7 +22,13 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" width="100">Samantha Volesky</a>
+        <a
+          class="navbar-brand"
+          href="#"
+          width="100"
+          title="all about Samantha Volesky"
+          >Samantha Volesky</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -37,15 +43,26 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="../index.html"
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="../index.html"
+                title="home link"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="about.html" title="about me link"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="contact me link"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -64,19 +81,38 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="a picture of a yoga pose"
+            title="yoga app"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/weather.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="a weather forcast diagram"
+            title="Weather app"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="a picture of a yogurt cup with blueberries"
+            title="yogurt app"
+          />
         </div>
       </div>
     </div>
     <div id="contact" class="mt-5">
       <h2>📮 Contact me</h2>
-      <a href="mailto: svolesky317@gmail.com" class="email-link">
+      <a
+        href="mailto: svolesky317@gmail.com"
+        class="email-link"
+        title="email link"
+      >
         svolesky317@gmail.com
       </a>
     </div>
