--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-md-6">
           <img
             src="images/yoga.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Photo of a yoga pose"
             title="Yoga app"
           />
