--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="col-md-6">
           <img
             src="images/weather.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="weather diagram"
             title="weather app project"
           />
@@ -128,7 +128,7 @@
         <div class="col-md-6">
           <img
             src="images/yogurt.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="picture of a yougurt cup with bluberries"
             title="Yogurt app"
           />
