--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
               <a
                 class="nav-link"
                 aria-current="page"
-                href="../index.html"
-                title="home link"
+                href="index.html"
+                title="homepage"
                 >Home</a
               >
             </li>
@@ -83,7 +83,7 @@
         <div class="col-sm-4">
           <img
             src="images/yoga.png"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
             alt="a picture of a yoga pose"
             title="yoga app"
           />
@@ -91,7 +91,7 @@
         <div class="col-sm-4">
           <img
             src="images/weather.png"
-            class="img-fluid p-2 shadow rounded"
+            class="img-fluid p-2 mb-4 shadow rounded"
             alt="a weather forcast diagram"
             title="Weather app"
           />
