--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="index.html"
-                title="Home-link"
+                href="/"
+                title="Home"
                 >Home</a
               >
             </li>
