Fixed CSS properties

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
-    <h1>Samantha Volesky</h1>
-    <h3>🇺🇸 Front-end developer, based in Colorado</h3>
+    <h2 class="text-center">👋 Hi I am</h2>
+    <h1 class="text-center">Samantha Volesky</h1>
+    <h3 class="text-center">🇺🇸 Front-end developer, based in Colorado</h3>
     <div class="navigation-links">
       <a
         href="about.html#contact"
@@ -77,7 +77,7 @@
     </div>
     <div class="container">
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="images/yoga.png"
             class="img-fluid rounded d-none d-sm-block"
@@ -85,8 +85,8 @@
             title="Yoga app"
           />
         </div>
-        <div class="col-md-6">
-          <h2 class="mb-3 text-start">Yoga app</h2>
+        <div class="col-sm-6">
+          <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -94,15 +94,18 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Launch yoga app button"
+            <a
+              href="#"
+              class="primary-link project-launch"
+              title="Launch yoga app button"
               >Launch Yoga App</a
             >
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-3 text-start">Weather app</h2>
+        <div class="col-sm-6">
+          <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -110,12 +113,15 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link" title="Launch weather app button"
+            <a
+              href="#"
+              class="primary-link project-launch"
+              title="Launch weather app button"
               >Launch Weather App</a
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="images/weather.png"
             class="img-fluid rounded d-none d-sm-block"
@@ -125,7 +131,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="images/yogurt.png"
             class="img-fluid rounded d-none d-sm-block"
@@ -133,8 +139,8 @@
             title="Yogurt app"
           />
         </div>
-        <div class="col-md-6">
-          <h2 class="mb-3 text-start">Yogurt app</h2>
+        <div class="col-sm-6">
+          <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -143,7 +149,10 @@
           </p>
 
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Launch yogurt app button"
+            <a
+              href="#"
+              class="primary-link project-launch"
+              title="Launch yogurt app button"
               >Launch Yogurt App</a
             >
           </div>
